fix extra spacing issue for inline anchor tags

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -56,6 +56,7 @@ code {
 
 a,
 a:visited {
+  display: inline-block;
   color: var(--color-link-text);
 }
 a[aria-disabled="true"] {
